hdone/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <description>Calculates age of person taking into account leap years</description>
        <formula>IF(MONTH(TODAY())&gt;MONTH(Birthdate),YEAR(TODAY())-YEAR(Birthdate),IF(AND(MONTH(TODAY())=MONTH(Birthdate),DAY(TODAY())&gt;=DAY(Birthdate)),YEAR(TODAY())-YEAR(Birthdate),(YEAR(TODAY())-YEAR(Birthdate))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of person</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AuditReportCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of number of completed Audit Reports for Contact</description>
        <inlineHelpText>Count of number of completed Audit Reports</inlineHelpText>
        <label>AuditReportCount</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Related_External__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Contact</description>
        <inlineHelpText>Related Contact</inlineHelpText>
        <label>Contact Related External</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Contact Related External)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerId__c</fullName>
        <description>External Id from Customer. Should be unique across objects for customer.</description>
        <externalId>true</externalId>
        <inlineHelpText>External or Customer Id</inlineHelpText>
        <label>CustomerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_Verification__c</fullName>
        <description>Type of AuditReports, if any, Contact is eligible for</description>
        <inlineHelpText>Type of AuditReports Contact is eligible for</inlineHelpText>
        <label>Eligible Verification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>In_Person</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Create Initial Confirmation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ExternalId</description>
        <externalId>true</externalId>
        <inlineHelpText>ExternalId</inlineHelpText>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flow_Status__c</fullName>
        <label>Flow Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Gender of person</description>
        <inlineHelpText>Person gender</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Middle name for person</description>
        <inlineHelpText>Middle name of person</inlineHelpText>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nickname_First__c</fullName>
        <description>Nickname, if any, substituting for First Name</description>
        <inlineHelpText>Nickname, if any, substituting for First Name</inlineHelpText>
        <label>Nickname_First</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNRCStatusCheck__c</fullName>
        <description>Last date and time the PartnerNetworkRecordConnection status was updated</description>
        <inlineHelpText>Last date and time the PartnerNetworkRecordConnection status was updated</inlineHelpText>
        <label>PNRCStatusCheck</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Process_Builder_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Process Builder has run to avoid recursive updates</description>
        <inlineHelpText>Indicates if Process Builder has run to avoid recursive updates</inlineHelpText>
        <label>Process Builder Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profile_Image__c</fullName>
        <description>This field is to store image URL used to display on ScheduleDetail Page</description>
        <inlineHelpText>Profile image</inlineHelpText>
        <label>Profile Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ProviderId_Formula__c</fullName>
        <formula>CASE(  SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Id),
&quot;HealthDetail&quot;,
ExternalId__c,&quot;Error&quot;)

/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <label>ProviderId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Text__c</fullName>
        <description>Used for Salesforce to Salesforce sharing</description>
        <formula>/* Gets name of Record Type for Salesforce to Salesforce sharing */
RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Record Type Name</inlineHelpText>
        <label>Record Type Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product Names must match, please select a different record</errorMessage>
            <filterItems>
                <field>$Source.Product_Name__c</field>
                <operation>equals</operation>
                <valueField>Contact.Product_Name__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Status__c</field>
                <operation>notEqual</operation>
                <value>Duplicate</value>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <valueField>Contact.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Related_Contact__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <infoMessage>Showing all non duplicate records for same product</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Related_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remote_Provider_Id__c</fullName>
        <description>Remote Provider Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Remote Provider Id</inlineHelpText>
        <label>Remote_Provider_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Record_Type__c</fullName>
        <description>Value for Remote Record Type. Used for Salesforce to Salesforce</description>
        <inlineHelpText>Value for Remote Record Type</inlineHelpText>
        <label>Remote Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_PartnerConnection_Id__c</fullName>
        <description>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</description>
        <externalId>true</externalId>
        <inlineHelpText>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</inlineHelpText>
        <label>Sf2Sf_PartnerConnection_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareId__c</fullName>
        <description>Id from PartnerNetworkRecordConnection for shared record.</description>
        <inlineHelpText>Id from PartnerNetworkRecordConnection for shared record.</inlineHelpText>
        <label>Sf2Sf ShareId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareName__c</fullName>
        <description>Sharing name for Salesforce to Salesforce. Uses Custom setting to get name as PartnerNetworkConnection name cannot be changed and can be confusing</description>
        <inlineHelpText>Sharing name for Salesforce to Salesforce from Custom Setting</inlineHelpText>
        <label>Sf2Sf_ShareName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareStatus__c</fullName>
        <description>Populates shared status for Salesforce to Salesforce connection. Cannot read status from object only from PartnerNetworkConnection object</description>
        <inlineHelpText>Shared status for Salesforce to Salesforce connection. Not real time.</inlineHelpText>
        <label>Sf2Sf_ShareStatus</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if record should be shared with other organization. Used for Salesforce to Salesforce.</description>
        <inlineHelpText>Should record be shared?</inlineHelpText>
        <label>Share Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceOrg__c</fullName>
        <description>Identifies which is source org for record. If record is shared FROM customer to HealthDetail then Customer else if shared other way HealthDetail. Was using formula fields but getting relationship errors.</description>
        <inlineHelpText>Identifies which is source org for record Customer or HealthDetail</inlineHelpText>
        <label>SourceOrg</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>HealthDetail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source of record</description>
        <inlineHelpText>Record source</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credentialing Department</fullName>
                </value>
                <value>
                    <fullName>Internal Schedule</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Not Updated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of individual provider.</description>
        <inlineHelpText>Status of individual provider.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Leave of Absence</fullName>
                </value>
                <value>
                    <fullName>Sick</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Vacation</fullName>
                </value>
                <value>
                    <fullName>Claimed</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <description>Name suffix</description>
        <inlineHelpText>Name suffix</inlineHelpText>
        <label>Suffix</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Healthcare_Applicant</fullName>
        <active>true</active>
        <description>Person interested in more information on healthcare</description>
        <label>Healthcare Applicant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Healthcare_Provider</fullName>
        <active>true</active>
        <description>Healthcare Provider</description>
        <label>Healthcare Provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Record</fullName>
        <active>true</active>
        <description>Master Record</description>
        <label>Master Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>MemberOne_Service</fullName>
        <active>true</active>
        <description>MemberOne Service Rep. Usually customer support</description>
        <label>MemberOne Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Navigator</fullName>
        <active>true</active>
        <description>Healthcare Navigators</description>
        <label>Navigator</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support</fullName>
        <active>true</active>
        <description>Contacts created for Support purposes. Usually by HealthDetail for Salesforce to Salesforce</description>
        <label>Support</label>
    </recordTypes>
</CustomObject>